getPartValues returns part resource or value